--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -423,10 +423,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymongo\n",
+    "\n",
+    "client= pymongo.MongoClient(\"mongodb+srv://kiran:<password>@cluster0.busb95b.mongodb.net/?retryWrites=true&w=majority\")\n",
+    "\n",
+    "db= client.test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Database(MongoClient(host=['ac-rfldmon-shard-00-00.busb95b.mongodb.net:27017', 'ac-rfldmon-shard-00-01.busb95b.mongodb.net:27017', 'ac-rfldmon-shard-00-02.busb95b.mongodb.net:27017'], document_class=dict, tz_aware=False, connect=True, retrywrites=True, w='majority', authsource='admin', replicaset='atlas-1x6g22-shard-0', tls=True), 'test')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "video_stat = requests.get(video_url).json()\n"
+   ]
   }
  ],
  "metadata": {
